--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1> The Analyst<br />
-					    Portfolio</h1>
-						<p>A dedicated data scientist skilled in data preparations, data visualization, SQL, python, tableau, tensorflow, keras, Github, pytorch, flask, google cloud, statistical data analysis, machine learning, deep learning among other critical skills for data science and analytics field.</p>
+						<h2> Kelvin Sila<br />
+					    Data Scientist/Analyst</h2>
+						<p>A dedicated data scientist skilled in Power BI, Excell/Google sheets, SQL, python, tableau, tensorflow, keras, Github, pytorch, flask, google cloud, statistical data analysis, machine learning, deep learning among other critical skills for data science and analytics field.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"> Kelvin Sila</a>
+						<a href="index.html" class="logo"> Portfolio</a>
 					</header>
 
 				<!-- Nav -->
@@ -47,71 +47,117 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<span class="date"> February 30, 2024</span>
-									<h2><a href="https://github.com/ksila01/Moringa-AI-Chatbot/blob/main/chunk_Angela/Moringa_Chatbot_Slides.pdf ">Moringa School AI Chatbot<br />
-									</a></h2>
-									<p>In this project, we created a chatbot for moringa school website. We scrapped data from all moringa school sites using API scrapper functions and beautifulsoup and through the extracted corpus text, we created a JSON file with intents, questions, and responses. In this project, i gained alot of skills in natural language processing (NLP) specifically deep learning models such as sequential models that we used to train chatbot to generate appropriate responses for any user questions.We are still improving the performance of our model.I also gained some skills in webscrapping, parsing json files, and data cleaning skills for NLP </p>
-									<p> Feel free to interact with our chatbot here: <a href="https://tawi-chatbot.onrender.com "> Tawi-Chatbot</a>.</p>
-									<p> Find our final project presentation slides here: <a href="https://github.com/ksila01/Moringa-AI-Chatbot/blob/main/chunk_Angela/Moringa_Chatbot_Slides.pdf "> Final Presentation</a>.</p>
-
-
-								</header>
-								<a href="#" class="image main"><img src="images/image.png" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/ksila01/Moringa-AI-Chatbot/blob/main/index.ipynb " class="button large">View Project</a></li>
-								</ul>
-							</article>
+						<article class="post featured" style="max-width: 800px; margin: auto;">
+							<header class="major">
+								<h3><a href="https://github.com/ksila01/Moringa-AI-Chatbot/blob/main/chunk_Angela/Moringa_Chatbot_Slides.pdf">Moringa School AI Chatbot</a></h3>
+								<p style="font-size: 12px;">
+									In this project, we created a chatbot for Moringa School's website. We scraped data from all Moringa School sites using API scraper functions and BeautifulSoup. Through the extracted corpus text, we created a JSON file with intents, questions, and responses. I gained skills in natural language processing (NLP), specifically deep learning models such as sequential models used to train the chatbot to generate appropriate responses. We are still improving our model’s performance. Additionally, I developed skills in web scraping, parsing JSON files, and data cleaning for NLP.
+								</p>
+								<p style="font-size: 10px;">
+									Chatbot Website: <a href="https://tawi-chatbot.onrender.com">Tawi-Chatbot</a>.
+								</p>
+							</header>
+							<a href="#" class="image main" style="display: block; margin: auto;">
+								<img src="images/image.png" alt="" style="max-width: 100%; height: auto;" />
+							</a>
+							<ul class="actions special" style="text-align: center;">
+								<li><a href="https://github.com/ksila01/Moringa-AI-Chatbot/blob/main/index.ipynb" class="button large">View Project</a></li>
+							</ul>
+						</article>
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date"> December 12, 2023</span>
-										<h2><a href="https://github.com/Iswana-O/Deep-Learning-for-Automated-Identification-of-Plant-Leaf-Diseases/blob/main/DEEP%20LEARNING%20FOR%20IDENTIFICATION%20OF%20PLANT%20LEAF%20DISEASES.pdf "> Image Classification For Potatoe Disease Identification<br />
-										</a></h2>
+										<h2>
+											<a href="https://github.com/ksila01" style="text-decoration: underline;">
+												Power BI Projects
+												<img src="images/pbi.png" alt="Power BI Logo" style="vertical-align: middle; width: 24px; height: 24px;">
+											</a>
+										</h2>
 									</header>
+									<h3 style="font-size: 16px;text-transform: capitalize;"><a href="#">Maji Ndogo National Water Survey Analysis Integrated Projects<br /></a></h3>
+									<p style="font-size: 12px;">Maji Ndogo is a mythical city facing challenges with clean water access; using data on water sources, collections, and related issues, I gained insights into residents' daily lives and water's role.</p>
+									<table>
+										<tr>
+											<td><a href="https://github.com/ksila01/Maji-Ndogo-Water-Survey-Part-1-Visualizing-Maji-Ndogo-s-Past.git" class="button">Part 1: Visualizing Maji Ndogo's Past</a></td>
+										</tr>
+										<tr>
+											<td><a href="https://github.com/ksila01/Maji-Ndogo-Water-Survey-Part-2.git" class="button">Part 2: Moulding Data Into Visual Stories of Maji Ndogo</a></td>
+										</tr>
+										<tr>
+											<td><a href="https://github.com/ksila01/Maji_Ndogo_Part3.git" class="button">Part 3: Communicating Findings in Maji Ndogo</a></td>
+										</tr>
+										<tr>
+											<td><a href="https://github.com/ksila01/Maji_Ndogo_Part3.git" class="button">Part 4: Communicating Findings in Maji Ndogo</a></td>
+										</tr>
+										<tr>
+											<td><a href="https://github.com/ksila01/SalesAnalysisProject.git" class="button">Sales Analysis Project</a></td>
+										</tr>
+									</table>
+								</article>
+								<article>
+									<header>
+										<h2>
+											<a href="https://github.com/ksila01" style="text-decoration: underline;">
+												Machine/Deep Learning Projects
+												<img src="images/ml.png" alt="Machine Learning Logo" style="vertical-align: middle; width: 24px; height: 24px;">
+											</a>
+										</h2>
+									</header>
+									<h3 style="font-size: 16px;text-transform: capitalize;"><a href="https://github.com/Iswana-O/Deep-Learning-for-Automated-Identification-of-Plant-Leaf-Diseases/blob/main/DEEP%20LEARNING%20FOR%20IDENTIFICATION%20OF%20PLANT%20LEAF%20DISEASES.pdf ">Automated Identification of Plant Leaf Disease<br /></a></h3>
 									<a href="#" class="image fit"><img src="images/image1.PNG" alt="" /></a>
-									<p>In this project, we leveraged the power of deep learning models especially Convolutional Neural Networks (CNN) to develop a mobile application aimed at helping potatoe farmers to diagnose plant diseases through image (leaf) recognition. The developed CNN model was capable to accurately classify different classes of potato plant leaf diseases, as well distinguish health leaves from unhealthy leaves.Through this project, i gained skills in image classification, data preprocessing, tensorflow, deep learning models, and model deployment on google cloud.</p>
-									<p> Feel free to interact with the mobile app here: <a href="https://predict-ipwknoicua-uc.a.run.app "> Advantech's Mobile App</a>.</p>
-									<p> Find the final project presentation slides here: <a href="https://github.com/Iswana-O/Deep-Learning-for-Automated-Identification-of-Plant-Leaf-Diseases/blob/main/DEEP%20LEARNING%20FOR%20IDENTIFICATION%20OF%20PLANT%20LEAF%20DISEASES.pdf "> Final Presentation</a>.</p>
+									<p style="font-size: 12px;">In this project, we used Convolutional Neural Networks (CNN) to create a mobile app for diagnosing potato plant diseases through leaf image recognition. The CNN model accurately classified various potato leaf diseases and identified healthy vs. unhealthy leaves. I gained skills in image classification, data preprocessing, TensorFlow, deep learning, and model deployment on Google Cloud.</p>
+									<p style="font-size: 10px;"> Mobile App: <a href="https://predict-ipwknoicua-uc.a.run.app "> Advantech's Mobile App</a>.
+									 Presentation: <a href="https://github.com/Iswana-O/Deep-Learning-for-Automated-Identification-of-Plant-Leaf-Diseases/blob/main/DEEP%20LEARNING%20FOR%20IDENTIFICATION%20OF%20PLANT%20LEAF%20DISEASES.pdf "> Final Presentation</a>.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Iswana-O/Deep-Learning-for-Automated-Identification-of-Plant-Leaf-Diseases/blob/main/POTATO_DISEASE_CLASSIFICATION-Phase%204%20Project.ipynb " class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
+									
+									<h3 style="font-size: 16px;text-transform: capitalize;"><a href="https://github.com/ksila01/DiabetesPrediction.git">Diabetes Prediction<br /></a></h3>
+									<a href="#" class="image fit"><img src="images/Db.PNG" alt="" /></a>
+									<p style="font-size: 12px;">The goal of this machine learning project is to develop a diabetes prediction system using logistic regression. This system will help in early identification of individuals who may be at risk of developing diabetes based on certain health-related features. The deployment will be done through a Django web application, providing a user-friendly interface for individuals to input their health data and receive predictions regarding their likelihood of being diabetic.
+										.</p>
+									 Presentation: <a href="https://github.com/ksila01/DiabetesPrediction.git"> Jupyter notebooks</a>.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/ksila01/DiabetesPrediction.git" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
 									<header>
-										<h2><a href="#">Unsupervised ML Predictive Modelling for Customer Churn<br />
-										</a></h2>
+										<h3 style="font-size: 16px;text-transform: capitalize;"><a href="#">Unsupervised ML Predictive Modelling for Customer Churn<br />
+										</a></h3>
 									</header>
 									<a href="#" class="image fit"><img src="images/image2.png" alt="" /></a>
-									<p>In this project, I analyzed where my client (Syria telcommunications) was at risk of loosing its clients. Using the dataset provided by Kaggle, I analyzed the trends and patterns in the dataset and used both supervised and unsupervised models for making predictions about the customer churn. I gained skills in classification models such as logistic regression, K Nearest Neighbors (KNN), Decision Tree, and XG Boost. I also gained skills in evaluation metrics such as accuracy scores, confusion matrix, and hyperperameter tuning using GridSearchCV.</p>
-									<p> Find the final project presentation slides here: <a href="https://github.com/ksila01/Phase-3-Project/blob/main/Final%20Presentation.pdf "> Final Presentation</a>.</p>
+									<p>In this project, I analyzed customer churn risk for Syria Telecommunications using Kaggle data. I employed supervised and unsupervised models, including logistic regression, KNN, decision trees, and XGBoost, and developed skills in accuracy, confusion matrices, and hyperparameter tuning with GridSearchCV. </p>
+									<p > Project Slides <a href="https://github.com/ksila01/Phase-3-Project/blob/main/Final%20Presentation.pdf "> Final Presentation</a>.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/ksila01/Phase-3-Project/blob/main/Final%20jupyter%20notebook.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/juliet-2013/REALESTATEPROJECT-8/blob/main/student.ipynb ">Supervised Machine Learning Predictive Modeling<br />
-										</a></h2>
+										<h3 style="font-size: 16px;text-transform: capitalize;"><a href="https://github.com/juliet-2013/REALESTATEPROJECT-8/blob/main/student.ipynb ">Supervised Machine Learning Predictive Modeling<br />
+										</a></h3>
 									</header>
 									<a href="#" class="image fit"><img src="images/image2.jpg" alt="" /></a>
-									<p>In this project, we utilized supervised machine learning models to predict the likehood of customers buying hourses in King's County, Washington DC. Our analytics involved linear regression to predict conditions that are favorable to sell or buy a house such as size of living room, number of bedrooms, bathrooms, and floors. I gained skills in data preparations, feature engineering, data visualization, and linear regression. </p>
-									<p> Find the final project presentation slides here: <a href="https://github.com/juliet-2013/REALESTATEPROJECT-8/blob/main/Final%20Presentation.pdf "> Final Presentation</a>.</p>
+									<p>In this project, we used supervised machine learning to predict customer likelihood of buying houses in King’s County, Washington DC. We applied linear regression to identify key factors for buying or selling, including living room size, number of bedrooms, bathrooms, and floors. I gained skills in data preparation, feature engineering, data visualization, and linear regression.
+									</p>
+									<p> Project Slides: <a href="https://github.com/juliet-2013/REALESTATEPROJECT-8/blob/main/Final%20Presentation.pdf "> Final Presentation</a>.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/juliet-2013/REALESTATEPROJECT-8/blob/main/student.ipynb " class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/ksila01/dsc-phase-1-project/blob/main/student.ipynb ">Data Analysis for Microsoft's Movie Venture<br />
-										</a></h2>
+										<h3 style="font-size: 16px;text-transform: capitalize;"><a href="https://github.com/ksila01/dsc-phase-1-project/blob/main/student.ipynb ">Data Analysis for Microsoft's Movie Venture<br />
+										</a></h3>
 									</header>
 									<a href="https://github.com/ksila01/dsc-phase-1-project/blob/main/student.ipynb" class="image fit"><img src="images/image3.PNG" alt="" /></a>
-									<p>In this project, i did an exploratory data analysis to explore trends in production, release, and profitability of movie genres since 2015 to advise Microsoft where to venture into movie industry or not. The analysis aimed at recommending the best movie genres and appropriate release month for microsoft to remain competitive in the field. During the analysis, i included the current inflation rate of that time and adjusted the profit and adjusted profit margin per the inflation rates. From the analysis, the Avengers had the highest return on investment. This project sharpened by skills in data analysis, data visualizations, feature engineering, and data. </p>
-									<p> Find the final project presentation slides here: <a href="https://github.com/ksila01/dsc-phase-1-project/blob/main/Final%20Project%20Presentation.pdf "> Final Presentation</a>.</p>
+									<p >In this project, I conducted exploratory data analysis to evaluate trends in movie production, release, and profitability since 2015, advising Microsoft on whether to enter the movie industry. The analysis recommended optimal movie genres and release months, adjusted for inflation. The Avengers had the highest return on investment. This project enhanced my skills in data analysis, visualization, and feature engineering. </p>
+									<p> Project Slides: <a href="https://github.com/ksila01/dsc-phase-1-project/blob/main/Final%20Project%20Presentation.pdf "> Final Presentation</a>.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/ksila01/dsc-phase-1-project/blob/main/student.ipynb " class="button"> View Project</a></li>
 									</ul>
