--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 											</a>
 										</h2>
 									</header>
-									<h3 style="font-size: 16px;text-transform: capitalize;"><a href="#">Power BI Ana<br /></a></h3>
-									<p style="font-size: 12px;"> This series of projects uses power BI to Analyze water crisis in Maji Ndogo, amythical city facing challenges with clean water access; using data on water sources, collections, and related issues, I gained insights into residents' daily lives and water's role.</p>
+									<h3 style="font-size: 16px;text-transform: capitalize;"><a href="#">Power BI analytics<br /></a></h3>
+									<p style="font-size: 12px;"> This series of projects uses power BI to Analyze water crisis in Maji Ndogo, amythical city facing challenges with clean water access; using data on water sources, collections, and related issues, I gained insights into residents' daily lives and water's role. Click the links below for specific projects</p>
 									<table>
 										<tr>
 											<td><a href="https://github.com/ksila01/Maji-Ndogo-Water-Survey-Part-1-Visualizing-Maji-Ndogo-s-Past.git" class="button">Part 1: Visualizing Maji Ndogo's Past</a></td>
@@ -106,7 +106,7 @@
 										</h2>
 									</header>
 									<h3 style="font-size: 16px;text-transform: capitalize;"><a href="#"> SQL Projects<br /></a></h3>
-									<p style="font-size: 12px;"> In these series of projects, i utilized database from Maji Ndogo and queried data from the database using structured query language (SQL). From the analysis, i sharpened my sql skills such as using statements such as SELECT, FROM, GROUP BY, ORDER BY, WHEREBY, among others.</p>
+									<p style="font-size: 12px;"> In these series of projects, i utilized database from Maji Ndogo and queried data from the database using structured query language (SQL). From the analysis, i sharpened my sql skills such as using statements such as SELECT, FROM, GROUP BY, ORDER BY, WHEREBY, among others.Click the links below for specific projects</p>
 									<table>
 										<tr>
 											<td><a href="https://github.com/ksila01/sql_data_querying.git" class="button">Part 1: Beginning Our Data-Driven Journey in Maji Ndogo </a></td>
@@ -118,7 +118,7 @@
 											<td><a href="https://github.com/ksila01/sql_data_querying_part3.git" class="button">Part 3: Weaving the data threads of Maji Ndogo's narrative </a></td>
 										</tr>
 										<tr>
-											<td><a href="https://github.com/ksila01/sql_data_querring_part4.git" class="button">Part 4: Clustering data to unveil Maji Ndogo's water crisis </a></td>
+											<td><a href="https://github.com/ksila01/sql_data_querring_part4.git" class="button">Part 4: Clustering data to unveil Maji Ndogo's water crisis</a></td>
 										</tr>
 										<tr>
 											<td><a href="https://github.com/ksila01/SalesAnalysisProject.git" class="button">Sales Analysis Project</a></td>
