--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 									</header>
 									<h3 style="font-size: 16px;text-transform: capitalize;"><a href="#">Power BI analytics<br /></a></h3>
 									<p style="font-size: 12px;"> This series of projects uses power BI to Analyze water crisis in Maji Ndogo, amythical city facing challenges with clean water access; using data on water sources, collections, and related issues, I gained insights into residents' daily lives and water's role. Click the links below for specific projects</p>
+									<a href="#" class="image fit"><img src="images/national.PNG" alt="" /></a>
 									<table>
 										<tr>
 											<td><a href="https://github.com/ksila01/Maji-Ndogo-Water-Survey-Part-1-Visualizing-Maji-Ndogo-s-Past.git" class="button">Part 1: Visualizing Maji Ndogo's Past</a></td>
@@ -107,6 +108,7 @@
 									</header>
 									<h3 style="font-size: 16px;text-transform: capitalize;"><a href="#"> SQL Projects<br /></a></h3>
 									<p style="font-size: 12px;"> In these series of projects, i utilized database from Maji Ndogo and queried data from the database using structured query language (SQL). From the analysis, i sharpened my sql skills such as using statements such as SELECT, FROM, GROUP BY, ORDER BY, WHEREBY, among others.Click the links below for specific projects</p>
+									<a href="#" class="image fit"><img src="images/sq.PNG" alt="" /></a>
 									<table>
 										<tr>
 											<td><a href="https://github.com/ksila01/sql_data_querying.git" class="button">Part 1: Beginning Our Data-Driven Journey in Maji Ndogo </a></td>
